[package]
name = "giteki"
version = "0.9.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
percent-encoding = "2.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
textwrap = { version = "0.16", features = ["unicode-width"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
unicode-normalization = "0.1"
unicode-width = "0.2"
